# supply_chain_risk_api

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  LOGICAL_ARCHITECTURE.md  PHYSICAL_ARCHITECTURE.md  README.md  REVIEW_REPORT.md  Supply Chain Risk Agent - Design Document.md  pyproject.toml  seed_data.yaml  user-stories.md
src/alembic/: env.py
src/app/: deps.py  main.py
src/app/api/v1/endpoints/: assessment.py
src/app/core/: config.py
src/app/db/: session.py
src/app/models/: assessment.py  shipment.py
src/app/repositories/: shipment_repo.py
src/app/schemas/: assessment.py  shipment.py
src/app/services/: extraction_service.py  risk_service.py
tests/e2e/: test_assessment_api.py
tests/integration/db/: test_assessment_model.py  test_shipment_model.py
tests/integration/repositories/: test_shipment_repo.py
tests/unit/schemas/: test_assessment_schema.py  test_shipment_schema.py
tests/unit/services/: test_extraction_service.py  test_risk_service.py
